<resources>
    <string name="app_name">Handsome</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="tab_menu_shop">商城</string>
    <string name="tab_menu_hall">大厅</string>


    <string name="tab_menu_user">个人中心</string>
    <string name="tx_name">姓名</string>
    <string name="tx_telphone">手机号</string>
    <string name="tx_password">密码</string>

    <string name="tx_login">登录</string>
    <string name="tx_register">注册</string>
    <string name="tx_update_data">修改资料</string>
    <string name="tx_update_password">修改密码</string>

    <string name="tx_makesure">确定</string>
    <string name="tx_back">返回</string>
    <string name="tx_logout">退出</string>
    
    <string name="tx_oldPassword">旧密码</string>
    <string name="tx_repeatPassword">重复密码</string>

    <string name="tx_address">收货地址</string>
    <string name="tx_address_manage">地址管理</string>

    <string name="tx_add">+</string>
    <string name="tx_subtract">——</string>

    <string name="tx_receName">收货姓名</string>
    <string name="tx_recePhone">手机号码</string>

    <string name="tx_contact">联系方式</string>
    <string name="tx_totalPrice">合计</string>
    <string name="tx_liuyan">留言</string>

    <string name="tx_js">结算</string>
    <string name="tx_gwcjs">购物结算</string>
    <string name="tx_nackname">用户名</string>
    <string name="tx_integral">积分</string>
    <string name="tx_addMoney">充值</string>
    <string name="tx_order_manager">订单管理</string>

    <string name="tx_totalMoney">总数合计</string>
    <string name="tx_orderStatus">订单状态</string>
    <string name="tx_orderId">订单号码</string>
    <string name="tx_orderTime">下单时间</string>
    <string name="tx_user_info">个人信息</string>
    <string name="tx_user_photo">个人头像</string>

    <string name="tx_bonus_detail">红包详情</string>
    <string name="tx_cds_bonus">猜单双红包</string>

</resources>
