<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/update_data_top_bar"/>
    <ListView
        android:id="@+id/lv_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5">
    </ListView>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:columnCount="2">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tx_totalMoney"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_totalMoney"
            android:text="￥122.0"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tx_orderStatus"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_orderStatus"
            android:text="待收货"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tx_orderId"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_orderId"
            android:text="1223332232332"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tx_orderTime"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_orderTime"
            android:text="2016年3月14日 10:21"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tx_receName"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_receName"
            android:text="张上鑫"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tx_recePhone"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_recePhone"
            android:text="1881397836"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/tx_address"
            android:textSize="20dp"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_receAddr"
            android:text="梅州市嘉应学院飞马城"
            android:textSize="20dp"
            />

    </GridLayout>
</LinearLayout>