<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_items">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_receName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_receName"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="12dp"
            />
        <TextView
            android:id="@+id/tv_recePhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tx_recePhone"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            android:layout_marginLeft="12dp"
            />
    </LinearLayout>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="20dp"
        android:text=">"
        android:clickable="true"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/tv_receAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_address"
        android:textSize="20dp"
        android:layout_marginLeft="12dp"
        />
</LinearLayout>