<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#000000">
        <ImageButton
            android:id="@+id/ib_back"
            android:layout_height="wrap_content"
            android:layout_width="25dp"
            android:scaleType="fitXY"
            android:layout_alignParentLeft="true"
            android:layout_margin="12dp"
            android:background="@mipmap/zf_back_btn"
            ></ImageButton>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/ib_back"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical|left"
            android:text="@string/tx_gwcjs"
            android:textSize="20dp"
            android:textColor="#ffffff"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_receName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_receName"
                android:textSize="18dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/tv_recePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_recePhone"
                android:textSize="18dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text=">"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/tv_receAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_address"
            android:textSize="18dp"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="30dp">

    </ListView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/tx_totalPrice"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="￥99.9"
            android:textSize="18dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_liuyan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:text="@string/tx_liuyan"
        android:textSize="18dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_liuyan"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/et_bg_border"/>
</RelativeLayout>