<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
    </FrameLayout>
    <include layout="@layout/include_splitline"></include>
    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        >
        <TextView
            android:id="@+id/tv_shop"
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_menu_shop"
            android:gravity="center"
            android:padding="@dimen/x3"
            android:text="@string/tab_menu_shop"
            android:textSize="@dimen/x13"/>
        <TextView
            android:id="@+id/tv_hall"
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_menu_hall"
            android:gravity="center"
            android:padding="@dimen/x3"
            android:text="@string/tab_menu_hall"
            android:textSize="@dimen/x13"/>
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_menu_user"
            android:gravity="center"
            android:padding="@dimen/x3"
            android:text="@string/tab_menu_user"
            android:textSize="@dimen/x13"/>

    </LinearLayout>
</LinearLayout>