<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#000000">



        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/tab_menu_user"
            android:textSize="20dp"
            android:textColor="#ffffff"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="8dp"
        android:background="#ffffff"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="70dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/iv_product"
                android:src="@mipmap/test_icon"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/tx_nackname"
                    android:textSize="18dp"
                    android:textColor="#000000"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:text="￥"
                        android:textSize="18dp"
                        android:textColor="#fa0909"
                        />
                    <TextView
                        android:id="@+id/tv_integral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/tx_integral"
                        android:textSize="18dp"
                        android:textColor="#fa0909"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_update_data"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/data"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/tx_update_data"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_update_password"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/tx_update_password"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_addMoney"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/money"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/tx_addMoney"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_order_manager"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/gwc2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/tx_order_manager"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/addr"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/tx_address"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:background="#ffffff">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:background="@mipmap/logout"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:textSize="18dp"
            android:text="@string/tx_logout"/>
    </LinearLayout>

</LinearLayout>