<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/update_data_top_bar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_oldPassword"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/et_oldPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/et_bg_border"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/tv_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/tx_password"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/et_bg_border"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/tv_repeatPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/tx_repeatPassword"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:id="@+id/et_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="10dp"
            android:background="@drawable/et_bg_border"
            android:inputType="textPassword"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

        </FrameLayout>

        <TextView
            android:id="@+id/tv_makesure"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/tx_makesure"
            android:textSize="20dp"
            android:textColor="#084ff5"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/tx_back"
            android:textColor="#084ff5"
            android:textSize="20dp"
            android:clickable="true"/>


    </LinearLayout>
</LinearLayout>