<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.handsome.qhb.ui.activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_telphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_telphone"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/et_telphone"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/et_bg_border"
            android:paddingLeft="10dp"
            />
        <TextView
            android:id="@+id/tv_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/tx_password"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/et_bg_border"
            android:paddingLeft="10dp"
            android:inputType="textPassword"/>
        <ProgressBar

            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

        </FrameLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/tx_login"
            android:textSize="20dp"
            android:textColor="#084ff5"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/tx_register"
            android:textColor="#084ff5"
            android:textSize="20dp"
            android:clickable="true"/>


    </LinearLayout>
</LinearLayout>
