<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/address_manage_top_bar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_receName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_name"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:id="@+id/et_receName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/et_bg_border"
            />
        <TextView
            android:id="@+id/tv_recePhone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/tx_contact"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:id="@+id/et_recePhone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/et_bg_border"/>
        <TextView
            android:id="@+id/tv_receAddr"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/tx_address"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:id="@+id/et_receAddr"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/et_bg_border"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

        </FrameLayout>

        <TextView
            android:id="@+id/tv_makesure"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/tx_makesure"
            android:textSize="20dp"
            android:textColor="#084ff5"
            />
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/tx_back"
            android:textColor="#084ff5"
            android:textSize="20dp"/>
        <!--<Button-->
        <!--android:id="@+id/id_bt_login"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="登陆" />-->

        <!--<Button-->
        <!--android:id="@+id/id_bt_register"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="注册" />-->
        <!--<CheckBox-->
        <!--android:id="@+id/id_cb_savePassword"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="记住密码"/>-->
        <!--<CheckBox-->
        <!--android:id="@+id/id_cb_autoLogin"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="自动登陆"/>-->

    </LinearLayout>
</LinearLayout>